fixing some spacing issues

--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -12,15 +12,15 @@
 	@include media($mobile) {
 		@include span-columns(10);
 		@include shift(1);
-		padding-top: 80px;
-		padding-bottom: 80px;
+		margin-top: 80px;
+		margin-bottom: 80px;
 	}
 
 	@include media($screen-xl) {
 		@include span-columns(12);
 		@include shift(0);
-		padding-top: 40px;
-		padding-bottom: 0px;
+		margin-top: 40px;
+		margin-bottom: 0px;
 	}
 
 	div {
